--- a/jpa/subsystem/pom.xml
+++ b/jpa/subsystem/pom.xml
@@ -106,5 +106,10 @@
             <artifactId>cdi-api</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.jboss.eap</groupId>
+            <artifactId>wildfly-weld-common</artifactId>
+        </dependency>
+
     </dependencies>
 </project>
