WFLY-5682 Update to allow the object-store-relative-to with the null value

--- a/transactions/src/main/resources/org/jboss/as/txn/subsystem/LocalDescriptions.properties
+++ b/transactions/src/main/resources/org/jboss/as/txn/subsystem/LocalDescriptions.properties
@@ -36,7 +36,7 @@ transactions.enable-tsm-status=Whether the transaction status manager (TSM) serv
 transactions.default-timeout=The default timeout for a transaction managed by the transaction manager.
 
 transactions.object-store-path=Denotes a relative or absolute filesystem path denoting where the transaction manager object store should store data. By default the value is treated as relative to the path denoted by the "relative-to" attribute. This settings is valid when default or journal store is used. It's not used when jdbc journal store is used.
-transactions.object-store-relative-to=References a global path configuration in the domain model, defaulting to the Application Server data directory (jboss.server.data.dir). The value of the "Object store path" attribute will treated as relative to this path. Use an empty string to disable the default behavior and force the value of the "Object store path" attribute to be treated as an absolute path.
+transactions.object-store-relative-to=References a global path configuration in the domain model, defaulting to the Application Server data directory (jboss.server.data.dir). The value of the "Object store path" attribute will treated as relative to this path. Undefine this attribute to disable the default behavior and force the value of the "Object store path" attribute to be treated as an absolute path.
 
 transactions.number-of-transactions=The total number of transactions (top-level and nested) created
 transactions.number-of-nested-transactions=The total number of nested (sub) transactions created.
