--- a/testsuite/integration/xts/pom.xml
+++ b/testsuite/integration/xts/pom.xml
@@ -80,6 +80,25 @@
                             </execution>
                         </executions>
                     </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-antrun-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <phase>process-test-resources</phase>
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <target>
+                                <ant antfile="${jbossas.ts.integ.dir}/src/test/scripts/xts-build.xml">
+                                    <target name="build-xts"/>
+                                </ant>
+                            </target>
+                        </configuration>
+                    </plugin>
                     <!--
                        Surefire test executions
                     -->
@@ -91,6 +110,10 @@
                             <includes>
                                 <include>org/jboss/as/test/xts/**/*TestCase.java</include>
                             </includes>
+                            <systemPropertyVariables combine.children="append">
+                                <arquillian.launch>xts-servers</arquillian.launch>
+                                <jboss.args>${jboss.args} -Dorg.apache.cxf.logging.enabled=true</jboss.args> <!-- TODO remove this -->
+                            </systemPropertyVariables>
                         </configuration>
                     </plugin>
                 </plugins>
