Refactor AdvancedExternalizerAdapter to new wildfly-clustering-marshalling-infinispan module.

--- a/feature-pack/pom.xml
+++ b/feature-pack/pom.xml
@@ -2301,6 +2301,16 @@
         </dependency>
         <dependency>
             <groupId>org.jboss.eap</groupId>
+            <artifactId>wildfly-clustering-marshalling-infinispan</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>*</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.eap</groupId>
             <artifactId>wildfly-clustering-marshalling-jboss</artifactId>
             <exclusions>
                 <exclusion>
