WFLY-7626 Datasources subsystem - small user experience enhancements

--- a/connector/src/main/resources/org/jboss/as/connector/subsystems/datasources/LocalDescriptions.properties
+++ b/connector/src/main/resources/org/jboss/as/connector/subsystems/datasources/LocalDescriptions.properties
@@ -96,7 +96,7 @@ datasources.data-source.pad-xid=Should the Xid be padded
 datasources.data-source.password=Specifies the password used when creating a new connection
 datasources.data-source.pool-name=Specifies the pool name for the datasource used for management
 datasources.data-source.pool-prefill=Should the pool be prefilled. Changing this value can be done only on disabled datasource, requires a server restart otherwise.
-datasources.data-source.pool-fair=Defines if pool should use be fair
+datasources.data-source.pool-fair=Defines if pool use should be fair
 datasources.data-source.pool-use-strict-min=Specifies if the min-pool-size should be considered strictly
 datasources.data-source.prepared-statements-cache-size=The number of prepared statements per connection in an LRU cache
 datasources.data-source.property-name=The property name
@@ -114,7 +114,7 @@ datasources.data-source.stale-connection-checker-class-name=An org.jboss.jca.ada
 datasources.data-source.stale-connection-checker-properties=The stale connection checker properties
 
 datasources.data-source.track-statements=Whether to check for unclosed statements when a connection is returned to the pool, result sets are closed, a statement is closed or return to the prepared statement cache. Valid values are: "false" - do not track statements, "true" - track statements and result sets and warn when they are not closed, "nowarn" - track statements but do not warn about them being unclosed
-datasources.data-source.transaction-isolation=Set the java.sql.Connection transaction isolation level. Valid values are: TRANSACTION_READ_UNCOMMITTED, TRANSACTION_READ_COMMITTED, TRANSACTION_REPEATABLE_READ, TRANSACTION_SERIALIZABLE and TRANSACTION_NONE
+datasources.data-source.transaction-isolation=Set the java.sql.Connection transaction isolation level. Valid values are: TRANSACTION_READ_UNCOMMITTED, TRANSACTION_READ_COMMITTED, TRANSACTION_REPEATABLE_READ, TRANSACTION_SERIALIZABLE and TRANSACTION_NONE. Different values are used to set customLevel using TransactionIsolation#customLevel
 
 datasources.data-source.url-delimiter=Specifies the delimiter for URLs in connection-url for HA datasources
 datasources.data-source.url-selector-strategy-class-name=A class that implements org.jboss.jca.adapters.jdbc.URLSelectorStrategy
@@ -153,7 +153,7 @@ datasources.data-source.reauth-plugin-class-name=The fully qualified class name 
 datasources.data-source.reauth-plugin-properties.reauth-plugin-class-name=The fully qualified class name of the reauthentication plugin implementation
 datasources.data-source.reauth-plugin-properties=The properties for the reauthentication plugin
 
-datasources.data-source.flush-strategy=Specifies how the pool should be flush in case of an error. Valid values are: FailingConnectionOnly (default), IdleConnections and EntirePool
+datasources.data-source.flush-strategy=Specifies how the pool should be flush in case of an error.
 datasources.data-source.use-ccm=Enable the use of a cached connection manager
 datasources.data-source.connectable=Enable the use of CMR. This feature means that a local resource can reliably participate in an XA transaction.
 datasources.data-source.tracking=Defines if IronJacamar should track connection handles across transaction boundaries
@@ -219,7 +219,7 @@ datasources.xa-data-source.pad-xid=Should the Xid be padded
 datasources.xa-data-source.password=Specifies the password used when creating a new connection
 datasources.xa-data-source.pool-name=Specifies the pool name for the datasource used for management
 datasources.xa-data-source.pool-prefill=Should the pool be prefilled. Changing this value can be done only on disabled datasource, requires a server restart otherwise.
-datasources.xa-data-source.pool-fair=Defines if pool should use be fair
+datasources.xa-data-source.pool-fair=Defines if pool use should be fair
 datasources.xa-data-source.pool-use-strict-min=Specifies if the min-pool-size should be considered strictly
 datasources.xa-data-source.prepared-statements-cache-size=The number of prepared statements per connection in an LRU cache
 datasources.xa-data-source.property-name=The property name
@@ -237,7 +237,7 @@ datasources.xa-data-source.stale-connection-checker-class-name=An org.jboss.jca.
 datasources.xa-data-source.stale-connection-checker-properties=The stale connection checker properties
 
 datasources.xa-data-source.track-statements=Whether to check for unclosed statements when a connection is returned to the pool, result sets are closed, a statement is closed or return to the prepared statement cache. Valid values are: "false" - do not track statements, "true" - track statements and result sets and warn when they are not closed, "nowarn" - track statements but do not warn about them being unclosed
-datasources.xa-data-source.transaction-isolation=Set the java.sql.Connection transaction isolation level. Valid values are: TRANSACTION_READ_UNCOMMITTED, TRANSACTION_READ_COMMITTED, TRANSACTION_REPEATABLE_READ, TRANSACTION_SERIALIZABLE and TRANSACTION_NONE
+datasources.xa-data-source.transaction-isolation=Set the java.sql.Connection transaction isolation level. Valid values are: TRANSACTION_READ_UNCOMMITTED, TRANSACTION_READ_COMMITTED, TRANSACTION_REPEATABLE_READ, TRANSACTION_SERIALIZABLE and TRANSACTION_NONE. Different values are used to set customLevel using TransactionIsolation#customLevel.
 
 datasources.xa-data-source.url-delimiter=Specifies the delimiter for URLs in connection-url for HA datasources
 datasources.xa-data-source.url-property=Specifies the property for the URL property in the xa-datasource-property values
@@ -268,8 +268,8 @@ datasources.xa-data-source.allocation-retry=The allocation retry element indicat
 datasources.xa-data-source.allow-multiple-users= Specifies if multiple users will access the datasource through the getConnection(user, password) method and hence if the internal pool type should account for that
 datasources.xa-data-source.connection-listener-class=Speciefies class name extending org.jboss.jca.adapters.jdbc.spi.listener.ConnectionListener that provides a possible to listen for connection activation and passivation in order to perform actions before the connection is returned to the application or returned to the pool.
 datasources.xa-data-source.connection-listener-property=Properties to be injected in class specified in connection-listener-class
-datasources.xa-data-source.background-validation-millis=The background-validation-millis element specifies the amount of time, in milliseconds, that background validation will run. Changing this value can be done only on disabled datasource,  requires a server restart otherwise
-datasources.xa-data-source.background-validation=An element to specify that connections should be validated on a background thread versus being validated prior to use. Changing this value can be done only on disabled datasource,  requires a server restart otherwise.
+datasources.xa-data-source.background-validation-millis=The background-validation-millis element specifies the amount of time, in milliseconds, that background validation will run.
+datasources.xa-data-source.background-validation=An element to specify that connections should be validated on a background thread versus being validated prior to use.
 datasources.xa-data-source.blocking-timeout-wait-millis=The blocking-timeout-millis element specifies the maximum time, in milliseconds, to block while waiting for a connection before throwing an exception. Note that this blocks only while waiting for locking a connection, and will never throw an exception if creating a new connection takes an inordinately long time
 
 datasources.xa-data-source.check-valid-connection-sql=Specify an SQL statement to check validity of a pool connection. This may be called when managed connection is obtained from the pool
@@ -278,7 +278,7 @@ datasources.xa-data-source.reauth-plugin-class-name=The fully qualified class na
 datasources.xa-data-source.reauth-plugin-properties.reauth-plugin-class-name=The fully qualified class name of the reauthentication plugin implementation
 datasources.xa-data-source.reauth-plugin-properties=The properties for the reauthentication plugin
 
-datasources.xa-data-source.flush-strategy=Specifies how the pool should be flush in case of an error. Valid values are: FailingConnectionOnly (default), IdleConnections and EntirePool
+datasources.xa-data-source.flush-strategy=Specifies how the pool should be flush in case of an error.
 datasources.xa-data-source.use-ccm=Enable the use of a cached connection manager
 datasources.xa-data-source.connectable=Enable the use of CMR for this datasource. This feature means that a local resource can reliably participate in an XA transaction.
 datasources.xa-data-source.tracking=Defines if IronJacamar should track connection handles across transaction boundaries
