--- a/weld/ejb/pom.xml
+++ b/weld/ejb/pom.xml
@@ -29,6 +29,30 @@
          <artifactId>wildfly-ejb3</artifactId>
       </dependency>
 
+      <dependency>
+         <groupId>org.jboss.logging</groupId>
+         <artifactId>jboss-logging</artifactId>
+      </dependency>
+
+      <dependency>
+         <groupId>org.jboss.logging</groupId>
+         <artifactId>jboss-logging-annotations</artifactId>
+         <!-- This is a compile-time dependency of this project, but is not
+            needed at compile or runtime by other projects that depend on this project. -->
+         <scope>provided</scope>
+         <optional>true</optional>
+      </dependency>
+
+      <dependency>
+         <groupId>org.jboss.logging</groupId>
+         <artifactId>jboss-logging-processor</artifactId>
+         <!-- This is a compile-time dependency of this project, but is not
+            needed at compile or runtime by other projects that depend on this project. -->
+         <scope>provided</scope>
+         <optional>true</optional>
+      </dependency>
+
+
    </dependencies>
 
 </project>
