WFLY-7627 Resource adapters subsystem - small user experience enhancements

--- a/connector/src/main/resources/org/jboss/as/connector/subsystems/resourceadapters/LocalDescriptions.properties
+++ b/connector/src/main/resources/org/jboss/as/connector/subsystems/resourceadapters/LocalDescriptions.properties
@@ -77,7 +77,7 @@ connection-definitions.dump-queued-threads-in-pool=Dump queued threads in the po
 connection-definitions.flush-idle-connection-in-pool=Flushes all idle connections in the pool.
 connection-definitions.flush-invalid-connection-in-pool=Flushes all invalid connections in the pool.
 connection-definitions.flush-gracefully-connection-in-pool=Flushes all connections gracefully in the pool.
-connection-definitions.flush-strategy=Specifies how the pool should be flushed in case of an error. Valid values are: FailingConnectionOnly, IdleConnections, and EntirePool.
+connection-definitions.flush-strategy=Specifies how the pool should be flushed in case of an error.
 connection-definitions.idle-timeout-minutes=Specifies the maximum time, in minutes, a connection may be idle before being closed. The actual maximum time depends also on the IdleRemover scan time, which is half of the smallest idle-timeout-minutes value of any pool. Changing this value requires a server restart.
 connection-definitions.jndi-name=Specifies the JNDI name for the connection factory.
 connection-definitions.interleaving=An element to enable interleaving for XA connections.
