--- a/pom.xml
+++ b/pom.xml
@@ -113,7 +113,7 @@
         <version.javax.validation>1.1.0.Final-redhat-1</version.javax.validation>
         <version.jaxen>1.1.6.redhat-1</version.jaxen>
         <version.jboss.jaxbintros>1.0.2.GA-redhat-8</version.jboss.jaxbintros>
-        <version.joda-time>2.9.5</version.joda-time>
+        <version.joda-time>2.9.5.redhat-1</version.joda-time>
         <version.jsoup>1.8.3.redhat-2</version.jsoup>
         <version.net.jcip>1.0.0.redhat-8</version.net.jcip>
         <version.net.shibboleth.utilities.java-support>7.1.1.redhat-1</version.net.shibboleth.utilities.java-support>
