[WFLY-6390] Add Elytron support to the batch subsystem. Added a new default-security-domain attribute. Use the SecurityDomain to get the identity to run batch jobs as.

--- a/batch/extension-jberet/src/main/resources/org/wildfly/extension/batch/jberet/LocalDescriptions.properties
+++ b/batch/extension-jberet/src/main/resources/org/wildfly/extension/batch/jberet/LocalDescriptions.properties
@@ -32,6 +32,8 @@ batch.jberet.default-job-repository=The name of the default job repository.
 batch.jberet.default-thread-pool=The name of the default thread-pool.
 batch.jberet.restart-jobs-on-resume=If set to true when a resume operation has be invoked after a suspend operation any \
   jobs stopped during the suspend will be restarted. A value of false will leave the jobs in a stopped state.
+batch.jberet.security-domain=References the security domain for batch jobs. This can only be defined if the Elytron \
+  subsystem is available.
 
 # In-Memory job repository
 batch.jberet.in-memory-job-repository=A job repository that stores job information in memory.
