WFLY-7661 Mark also ssl-session-cache-size and ssl-session-timeout attributes as deprecated in Undertow's https-listener

--- a/undertow/src/main/resources/org/wildfly/extension/undertow/LocalDescriptions.properties
+++ b/undertow/src/main/resources/org/wildfly/extension/undertow/LocalDescriptions.properties
@@ -180,7 +180,9 @@ undertow.listener.enable-spdy=Enables SPDY support for this listener. This has b
 undertow.listener.enable-spdy.deprecated=SPDY has been replaced by HTTP/2
 undertow.listener.disallowed-methods=A comma separated list of HTTP methods that are not allowed
 undertow.listener.ssl-session-cache-size=The maximum number of active SSL sessions
+undertow.listener.ssl-session-cache-size.deprecated=This can now be configured on the Elytron security context
 undertow.listener.ssl-session-timeout=The timeout for SSL sessions, in seconds
+undertow.listener.ssl-session-timeout.deprecated=This can now be configured on the Elytron security context
 undertow.listener.secure=If this is true then requests that originate from this listener are marked as secure, even if the request is not using HTTPS.
 undertow.listener.max-ajp-packet-size=The maximum supported size of AJP packets. If this is modified it has to be increased on the load balancer and the backend server.
 undertow.listener.http2-enable-push=If server push is enabled for this connection
