--- a/pom.xml
+++ b/pom.xml
@@ -988,6 +988,11 @@
             </dependency>
             <dependency>
                 <groupId>org.jboss.eap</groupId>
+                <artifactId>wildfly-clustering-marshalling-spi</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.jboss.eap</groupId>
                 <artifactId>wildfly-clustering-marshalling-infinispan</artifactId>
                 <version>${project.version}</version>
             </dependency>
