--- a/clustering/web/undertow/pom.xml
+++ b/clustering/web/undertow/pom.xml
@@ -40,6 +40,10 @@
     <dependencies>
         <dependency>
             <groupId>org.jboss.eap</groupId>
+            <artifactId>wildfly-clustering-marshalling-jboss</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.eap</groupId>
             <artifactId>wildfly-clustering-web-api</artifactId>
         </dependency>
         <dependency>
