[EAP7-563] Elytron based security manager implementation for Artemis.

--- a/messaging-activemq/src/main/resources/org/wildfly/extension/messaging/activemq/LocalDescriptions.properties
+++ b/messaging-activemq/src/main/resources/org/wildfly/extension/messaging/activemq/LocalDescriptions.properties
@@ -436,7 +436,8 @@ server.rollback-prepared-transaction.transaction-as-base-64=The Base64 represent
 server.rollback-prepared-transaction=Heuristically rolls back a prepared transaction.
 server.run-sync-speed-test=Whether on startup to perform a diagnostic test on how fast your disk can sync. Useful when determining performance issues.
 server.scheduled-thread-pool-max-size=The number of threads that the main scheduled thread pool has.
-server.security-domain=The security domain to use to verify user and role information
+server.elytron-domain=The name of the Elytron security domain used to verify user and role information.
+server.security-domain=The security domain to use to verify user and role information.
 server.security-enabled=Whether security is enabled.
 server.security-invalidation-interval=How long (in ms) to wait before invalidating the security cache.
 server.server-dump-interval=How often to dump basic runtime information to the server log. A value less than 1 disables this feature.
