[WFLY-7750] Messaging security domains
* Flag elytron-domain and security-domain as alternatives of each other
* add deprecated flag to security-domain

JIRA: https://issues.jboss.org/browse/WFLY-7750

--- a/messaging-activemq/src/main/resources/org/wildfly/extension/messaging/activemq/LocalDescriptions.properties
+++ b/messaging-activemq/src/main/resources/org/wildfly/extension/messaging/activemq/LocalDescriptions.properties
@@ -438,6 +438,7 @@ server.run-sync-speed-test=Whether on startup to perform a diagnostic test on ho
 server.scheduled-thread-pool-max-size=The number of threads that the main scheduled thread pool has.
 server.elytron-domain=The name of the Elytron security domain used to verify user and role information.
 server.security-domain=The security domain to use to verify user and role information.
+server.security-domain.deprecated=Deprecated. Replaced by the elytron-domain attribute to use a security domain configured by Elytron.
 server.security-enabled=Whether security is enabled.
 server.security-invalidation-interval=How long (in ms) to wait before invalidating the security cache.
 server.server-dump-interval=How often to dump basic runtime information to the server log. A value less than 1 disables this feature.
