--- a/naming/pom.xml
+++ b/naming/pom.xml
@@ -42,12 +42,12 @@
             <artifactId>wildfly-elytron</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.jboss</groupId>
-            <artifactId>jboss-remote-naming</artifactId>
-        </dependency>
-        <dependency>
             <groupId>org.jboss.msc</groupId>
             <artifactId>jboss-msc</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.wildfly</groupId>
+            <artifactId>wildfly-naming-client</artifactId>
         </dependency>
         <dependency>
             <groupId>org.wildfly.core</groupId>
