--- a/pom.xml
+++ b/pom.xml
@@ -846,6 +846,7 @@
         <dependency>
             <groupId>org.wildfly.checkstyle</groupId>
             <artifactId>wildfly-checkstyle-config</artifactId>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
