WFLY-3854 update build for jdk9 b148+

--- a/testsuite/compat/pom.xml
+++ b/testsuite/compat/pom.xml
@@ -203,7 +203,7 @@
                     <!-- Forked process timeout -->
                     <forkedProcessTimeoutInSeconds>${surefire.forked.process.timeout}</forkedProcessTimeoutInSeconds>
                     <!-- System properties to forked surefire JVM which runs clients. -->
-                    <argLine>${jvm.args.ip.client} ${jvm.args.timeouts}</argLine>
+                    <argLine>${jvm.args.ip.client} ${jvm.args.timeouts} ${surefire.system.args}</argLine>
                     <excludes>
                         <exclude>${surefire.excludeTests}</exclude>
                     </excludes>
