--- a/weld/subsystem/pom.xml
+++ b/weld/subsystem/pom.xml
@@ -17,7 +17,7 @@
 
 
          <!-- Big complex hack just to get @Resource(lookup="foo") -->
-         <plugin>
+        <!-- <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-dependency-plugin</artifactId>
             <executions>
@@ -36,7 +36,7 @@
                   </configuration>
                </execution>
             </executions>
-         </plugin>
+         </plugin>-->
       </plugins>
    </build>
 
