--- a/legacy/jacorb/pom.xml
+++ b/legacy/jacorb/pom.xml
@@ -42,15 +42,6 @@
     <build>
        <plugins>
           <plugin>
-             <artifactId>maven-compiler-plugin</artifactId>
-             <configuration>
-                <showDeprecation>false</showDeprecation>
-                <compilerArguments>
-                   <endorseddirs>${project.build.directory}/endorsed</endorseddirs>
-                </compilerArguments>
-             </configuration>
-          </plugin>
-          <plugin>
              <artifactId>maven-dependency-plugin</artifactId>
              <executions>
                 <execution>
@@ -74,6 +65,26 @@
           </plugin>
        </plugins>
     </build>
+    <profiles>
+        <profile>
+            <id>jdk8</id>
+            <activation>
+                <jdk>8</jdk>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <configuration>
+                            <compilerArguments>
+                                <endorseddirs>${project.build.directory}/endorsed</endorseddirs>
+                            </compilerArguments>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
     <dependencies>
 
