[EAP7-559] Allow the IIOP subsystem to use Elytron supplied SSLContexts.

--- a/iiop-openjdk/src/main/resources/org/wildfly/iiop/openjdk/LocalDescriptions.properties
+++ b/iiop-openjdk/src/main/resources/org/wildfly/iiop/openjdk/LocalDescriptions.properties
@@ -26,8 +26,10 @@ iiop-openjdk.export-corbaloc=Indicates whether the root context should be export
 # security configuration properties.
 iiop-openjdk.support-ssl=Indicates whether SSL is to be supported (on) or not (off).
 iiop-openjdk.security-domain=The name of the security domain that holds the key and trust stores that will be used to establish SSL connections.
-iiop-openjdk.client-requires-ssl=Indicates wheter IIOP connections from the server require SSL.
-iiop-openjdk.server-requires-ssl=Indicates wheter IIOP connections to the server require SSL.
+iiop-openjdk.server-ssl-context=The name of the SSL context used to create server side SSL sockets.
+iiop-openjdk.client-ssl-context=The name of the SSL context used to create client side SSL sockets.
+iiop-openjdk.client-requires-ssl=Indicates whether IIOP connections from the server require SSL.
+iiop-openjdk.server-requires-ssl=Indicates whether IIOP connections to the server require SSL.
 iiop-openjdk.add-component-via-interceptor=Indicates whether SSL components should be added by an IOR interceptor (on) or not (off).
 iiop-openjdk.add-component-via-interceptor.deprecated=Indicates whether SSL components should be added by an IOR interceptor (on) or not (off).
 iiop-openjdk.client-supports=Value that indicates the client SSL supported parameters (None, ServerAuth, ClientAuth, MutualAuth).
