WFLY-7806 Undertow mod_cluster: advertise-socket-binding should be auxiliary

--- a/undertow/src/main/resources/org/wildfly/extension/undertow/LocalDescriptions.properties
+++ b/undertow/src/main/resources/org/wildfly/extension/undertow/LocalDescriptions.properties
@@ -394,8 +394,8 @@ undertow.filter.mod-cluster=A mod-cluster front end load balancer
 undertow.handler.mod-cluster=A mod-cluster front end load balancer
 undertow.handler.mod-cluster.add=Adds a front end mod-proxy load balancer
 undertow.handler.mod-cluster.remove=Removes a mod cluster proxy handler
-undertow.handler.mod-cluster.management-socket-binding=The socket binding of the mod_cluster management port. When using mod_cluster two HTTP listeners should be defined, a public one to handle requests, and one bound to the internal network to handle mod cluster commands. This socket binding should correspond to the internal listener, and should not be publicly accessible
-undertow.handler.mod-cluster.advertise-socket-binding=The multicast group that is used to advertise
+undertow.handler.mod-cluster.management-socket-binding=The socket binding of the mod_cluster management address and port. When using mod_cluster two HTTP listeners should be defined, a public one to handle requests, and one bound to the internal network to handle mod cluster commands. This socket binding should correspond to the internal listener, and should not be publicly accessible.
+undertow.handler.mod-cluster.advertise-socket-binding=The multicast group and port that is used to advertise.
 undertow.handler.mod-cluster.security-key=The security key that is used for the mod-cluster group. All members must use the same security key.
 undertow.handler.mod-cluster.advertise-protocol=The protocol that is in use.
 undertow.handler.mod-cluster.advertise-path=The path that mod-cluster is registered under.
