--- a/pom.xml
+++ b/pom.xml
@@ -168,7 +168,7 @@
         <version.org.jboss.mod_cluster>1.3.3.Final-redhat-1</version.org.jboss.mod_cluster>
         <version.org.jboss.openjdk-orb>8.0.6.Final-redhat-1</version.org.jboss.openjdk-orb>
         <version.org.jboss.xnio.netty.netty-xnio-transport>0.1.1.Final-redhat-1</version.org.jboss.xnio.netty.netty-xnio-transport>
-        <version.org.jboss.resteasy>3.1.0.Final</version.org.jboss.resteasy>
+        <version.org.jboss.resteasy>3.1.0.Final-redhat-1</version.org.jboss.resteasy>
         <version.org.jboss.seam.int>7.0.0.GA-redhat-2</version.org.jboss.seam.int>
         <version.org.jboss.security.jboss-negotiation>3.0.3.Final-redhat-1</version.org.jboss.security.jboss-negotiation>
         <version.org.jboss.security.jbossxacml>2.0.8.Final-redhat-7</version.org.jboss.security.jbossxacml>
