--- a/pom.xml
+++ b/pom.xml
@@ -152,7 +152,7 @@
         <version.org.infinispan>8.2.5.Final-redhat-1</version.org.infinispan>
         <version.org.jasypt>1.9.1.redhat-1</version.org.jasypt>
         <version.org.javassist>3.18.1.GA-redhat-2</version.org.javassist>
-        <version.org.jberet>1.2.1.Final-redhat-1</version.org.jberet>
+        <version.org.jberet>1.2.2.Final</version.org.jberet>
         <version.org.jdom>1.1.3.redhat-3</version.org.jdom>
         <version.org.jboss.activemq.artemis.integration>1.0.2.redhat-1</version.org.jboss.activemq.artemis.integration>
         <version.org.jboss.common.jboss-common-beans>2.0.0.Final-redhat-1</version.org.jboss.common.jboss-common-beans>
@@ -891,12 +891,6 @@
             <dependency>
                 <groupId>org.jboss.eap</groupId>
                 <artifactId>wildfly-bean-validation</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.jboss.eap</groupId>
-                <artifactId>wildfly-jberet</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
