WFLY-7799 Failover targets should be chosen deterministically

--- a/undertow/src/main/resources/org/wildfly/extension/undertow/LocalDescriptions.properties
+++ b/undertow/src/main/resources/org/wildfly/extension/undertow/LocalDescriptions.properties
@@ -400,6 +400,7 @@ undertow.handler.mod-cluster.security-key=The security key that is used for the 
 undertow.handler.mod-cluster.advertise-protocol=The protocol that is in use.
 undertow.handler.mod-cluster.advertise-path=The path that mod-cluster is registered under.
 undertow.handler.mod-cluster.advertise-frequency=The frequency (in milliseconds) that mod-cluster advertises itself on the network
+undertow.handler.mod-cluster.failover-strategy=Determines how a failover node is chosen, in the event that the node to which a session has affinity is not available.
 undertow.handler.mod-cluster.health-check-interval=The frequency of health check pings to backend nodes
 undertow.handler.mod-cluster.broken-node-timeout=The amount of time that must elapse before a broken node is removed from the table
 undertow.handler.mod-cluster.max-request-time=The max amount of time that a request to a backend node can take before it is killed
