--- a/iiop-openjdk/src/main/resources/org/wildfly/iiop/openjdk/LocalDescriptions.properties
+++ b/iiop-openjdk/src/main/resources/org/wildfly/iiop/openjdk/LocalDescriptions.properties
@@ -34,21 +34,27 @@ iiop-openjdk.server-requires-ssl=Indicates whether IIOP connections to the serve
 iiop-openjdk.add-component-via-interceptor=Indicates whether SSL components should be added by an IOR interceptor (on) or not (off).
 iiop-openjdk.add-component-via-interceptor.deprecated=Indicates whether SSL components should be added by an IOR interceptor (on) or not (off).
 iiop-openjdk.client-supports=Value that indicates the client SSL supported parameters (None, ServerAuth, ClientAuth, MutualAuth).
-iiop-openjdk.client-supports.deprecated=Value that indicates the client SSL supported parameters (None, ServerAuth, ClientAuth, MutualAuth).
+iiop-openjdk.client-supports.deprecated=Use client-requires-ssl instead.
 iiop-openjdk.client-requires=Value that indicates the client SSL required parameters (None, ServerAuth, ClientAuth, MutualAuth).
-iiop-openjdk.client-requires.deprecated=Value that indicates the client SSL required parameters (None, ServerAuth, ClientAuth, MutualAuth).
+iiop-openjdk.client-requires.deprecated=Use client-requires-ssl instead.
 iiop-openjdk.server-supports=Value that indicates the server SSL supported parameters (None, ServerAuth, ClientAuth, MutualAuth).
-iiop-openjdk.server-supports.deprecated=Value that indicates the server SSL supported parameters (None, ServerAuth, ClientAuth, MutualAuth).
+iiop-openjdk.server-supports.deprecated=Use server-requires-ssl instead.
 iiop-openjdk.server-requires=Value that indicates the server SSL required parameters (None, ServerAuth, ClientAuth, MutualAuth).
-iiop-openjdk.server-requires.deprecated=Value that indicates the server SSL required parameters (None, ServerAuth, ClientAuth, MutualAuth).
+iiop-openjdk.server-requires.deprecated=Use server-requires-ssl instead.
 
 # IOR settings properties.
 iiop-openjdk.trust-in-client=Indicates if the transport must require trust in client to be established. Valid values are 'none', 'supported' and 'required'.
+iiop-openjdk.trust-in-client.deprecated=Use server-requires-ssl instead.
 iiop-openjdk.trust-in-target=Indicates if the transport must require trust in target to be established. Valid values are 'none' and 'supported'.
+iiop-openjdk.trust-in-target.deprecated=Use server-requires-ssl instead.
 iiop-openjdk.integrity=Indicates whether the transport must require integrity protection or not. Valid values are 'none', 'supported' and 'required'.
+iiop-openjdk.integrity.deprecated=Use server-requires-ssl instead.
 iiop-openjdk.confidentiality=Indicates whether the transport must require confidentiality protection or not. Valid values are 'none', 'supported' and 'required'.
+iiop-openjdk.confidentiality.deprecated=Use server-requires-ssl instead.
 iiop-openjdk.detect-replay=Indicates whether the transport must require replay detection or not. Valid values are 'none', 'supported' and 'required'.
+iiop-openjdk.detect-replay.deprecated=Use server-requires-ssl instead.
 iiop-openjdk.detect-misordering=Indicates whether the transport must require misordering detection or not. Valid values are 'none', 'supported' and 'required'.
+iiop-openjdk.detect-misordering.deprecated=Use server-requires-ssl instead.
 iiop-openjdk.ior-settings.as-context=The authentication service (AS) context settings.
 iiop-openjdk.auth-method=The authentication method. Valid values are 'none' and 'username_password'.
 iiop-openjdk.realm=The authentication service (AS) realm name.
