--- a/messaging-activemq/src/main/resources/org/wildfly/extension/messaging/activemq/LocalDescriptions.properties
+++ b/messaging-activemq/src/main/resources/org/wildfly/extension/messaging/activemq/LocalDescriptions.properties
@@ -332,15 +332,13 @@ server.journal-buffer-timeout=The timeout (in nanoseconds) used to flush interna
 server.journal-compact-min-files=The minimal number of journal data files before we can start compacting.
 server.journal-compact-percentage=The percentage of live data on which we consider compacting the journal.
 server.journal-datasource=Name of the DataSource for the JDBC store.
+server.journal-database=Type of the database (can be used to customize SQL statements). If this attribute is not specified, the type of the database will be determined based on the DataSource metadata.
 server.journal-file-size=The size (in bytes) of each journal file.
 server.journal-large-messages-table=Name of the JDBC table to store the large messages.
 server.journal-max-io=The maximum number of write requests that can be in the AIO queue at any one time.
 server.journal-messages-table=Name of the JDBC table to store the messages.
 server.journal-min-files=How many journal files to pre-create.
 server.journal-pool-files=The number of journal files that can be reused. ActiveMQ will create as many files as needed however when reclaiming files it will shrink back to the value (-1 means no limit).
-server.journal-sql-provider-factory-class=Class that implements org.apache.activemq.artemis.jdbc.store.sql.SQLProvider.Factory to provide dialect specific to the JDBC store (if undefined, the org.apache.activemq.artemis.jdbc.store.sql.GenericSQLProvider$Factory implementation is used).
-server.journal-sql-provider-factory-class.name=Name of the SQLProvider.Factory implementation class.
-server.journal-sql-provider-factory-class.module=Name the JBoss Module to load the SQLProvider.Factory implementation class.
 server.journal-sync-non-transactional=Whether to wait for non transaction data to be synced to the journal before returning a response to the client.
 server.journal-sync-transactional=Whether to wait for transaction data to be synchronized to the journal before returning a response to the client.
 server.journal-type=The type of journal to use.
