--- a/jsf/multi-jsf-installer/pom.xml
+++ b/jsf/multi-jsf-installer/pom.xml
@@ -107,7 +107,7 @@
             </activation>
             <properties>
                 <jsf-impl-name>myfaces</jsf-impl-name>
-                <jsf-version>2.1.12</jsf-version>
+                <jsf-version>${version.org.apache.myfaces.core}</jsf-version>
             </properties>
             <dependencies>
                 <dependency>
