--- a/pom.xml
+++ b/pom.xml
@@ -83,25 +83,25 @@
         <version.antlr>2.7.7.redhat-7</version.antlr>
         <version.asm>3.3.1.redhat-13</version.asm>
         <version.ch.qos.cal10n>0.8.1.redhat-1</version.ch.qos.cal10n>
-        <version.com.fasterxml.classmate>1.3.1.redhat-1</version.com.fasterxml.classmate>
-        <version.com.fasterxml.jackson>2.8.3.redhat-1</version.com.fasterxml.jackson>
+        <version.com.fasterxml.classmate>1.3.3</version.com.fasterxml.classmate>
+        <version.com.fasterxml.jackson>2.8.5</version.com.fasterxml.jackson>
         <version.com.github.relaxng>2011.1.0.redhat-10</version.com.github.relaxng>
-        <version.com.google.guava>18.0.0.redhat-1</version.com.google.guava>
-        <version.com.h2database>1.3.173.redhat-2</version.com.h2database>
-        <version.com.microsoft.azure>4.0.0.redhat-1</version.com.microsoft.azure>
+        <version.com.google.guava>20.0</version.com.google.guava>
+        <version.com.h2database>1.3.176</version.com.h2database>
+        <version.com.microsoft.azure>4.4.0</version.com.microsoft.azure>
         <version.com.sun.faces>2.2.13.SP3-redhat-1</version.com.sun.faces>
         <version.com.sun.istack>2.21.0.redhat-1</version.com.sun.istack>
         <version.com.sun.xml.fastinfoset>1.2.13.redhat-1</version.com.sun.xml.fastinfoset>
         <version.com.sun.xsom>20140925.0.0.redhat-1</version.com.sun.xsom>
-        <version.commons-beanutils>1.9.2.redhat-2</version.commons-beanutils>
-        <version.commons-cli>1.2.0.redhat-10</version.commons-cli>
+        <version.commons-beanutils>1.9.3</version.commons-beanutils>
+        <version.commons-cli>1.3.1</version.commons-cli>
         <version.commons-codec>1.10.0.redhat-5</version.commons-codec>
         <version.commons-collections>3.2.2.redhat-2</version.commons-collections>
         <version.commons-digester>1.8</version.commons-digester>
         <version.commons-pool>1.6.0.redhat-9</version.commons-pool>
         <version.dom4j>1.6.1.redhat-7</version.dom4j>
         <version.gnu.getopt>1.0.13.redhat-5</version.gnu.getopt>
-        <version.groovy-all>2.4.3</version.groovy-all>
+        <version.groovy-all>2.4.7</version.groovy-all>
         <version.httpunit>1.7</version.httpunit>
         <version.io.netty>4.0.35.Final-redhat-1</version.io.netty>
         <version.io.undertow.jastow>2.0.1.Final-redhat-1</version.io.undertow.jastow>
@@ -109,16 +109,16 @@
         <version.javax.activation>1.1.1.redhat-5</version.javax.activation>
         <version.javax.enterprise>1.2.0.redhat-2</version.javax.enterprise>
         <version.javax.jws.jsr181-api>1.0.0.MR1-redhat-8</version.javax.jws.jsr181-api>
-        <version.javax.mail>1.5.5.redhat-2</version.javax.mail>
+        <version.javax.mail>1.5.6</version.javax.mail>
         <version.javax.validation>1.1.0.Final-redhat-1</version.javax.validation>
         <version.jaxen>1.1.6.redhat-1</version.jaxen>
         <version.jboss.jaxbintros>1.0.2.GA-redhat-8</version.jboss.jaxbintros>
-        <version.joda-time>2.9.5.redhat-1</version.joda-time>
+        <version.joda-time>2.9.7</version.joda-time>
         <version.jsoup>1.8.3.redhat-2</version.jsoup>
         <version.net.jcip>1.0.0.redhat-8</version.net.jcip>
         <version.net.shibboleth.utilities.java-support>7.1.1.redhat-1</version.net.shibboleth.utilities.java-support>
         <version.org.apache.activemq.artemis>1.5.1.jbossorg-001</version.org.apache.activemq.artemis>
-        <version.org.apache.avro>1.7.6.redhat-1</version.org.apache.avro>
+        <version.org.apache.avro>1.8.1</version.org.apache.avro>
         <version.org.apache.cxf>3.1.9</version.org.apache.cxf>
         <version.org.apache.cxf.xjcplugins>3.0.5.redhat-1</version.org.apache.cxf.xjcplugins>
         <version.org.apache.ds>2.0.0-M20</version.org.apache.ds>
@@ -126,7 +126,7 @@
         <version.org.apache.james.apache-mime4j>0.6.0.redhat-5</version.org.apache.james.apache-mime4j>
         <version.org.apache.jstl>1.2.5.redhat-1</version.org.apache.jstl>
         <version.org.apache.lucene>5.3.1.redhat-1</version.org.apache.lucene>
-        <version.org.apache.myfaces.core>2.2.10</version.org.apache.myfaces.core>
+        <version.org.apache.myfaces.core>2.2.11</version.org.apache.myfaces.core>
         <version.org.apache.openjpa>2.4.1</version.org.apache.openjpa>
         <version.org.eclipselink.version>2.6.3</version.org.eclipselink.version>
         <version.org.apache.neethi>3.0.3.redhat-1</version.org.apache.neethi>
@@ -135,14 +135,14 @@
         <version.org.apache.ws.security>2.1.8</version.org.apache.ws.security>
         <version.org.apache.ws.xmlschema>2.2.1.redhat-1</version.org.apache.ws.xmlschema>
         <version.org.apache.xalan>2.7.1.redhat-11</version.org.apache.xalan>
-        <version.org.bouncycastle>1.52.0.redhat-3</version.org.bouncycastle>
+        <version.org.bouncycastle>1.56</version.org.bouncycastle>
         <version.org.codehaus.jackson>1.9.13.redhat-4</version.org.codehaus.jackson>
-        <version.org.codehaus.jettison>1.3.3.redhat-2</version.org.codehaus.jettison>
-        <version.org.cryptacular>1.0.0.redhat-1</version.org.cryptacular>
-        <version.org.eclipse.jdt.core.compiler>4.5.1.redhat-1</version.org.eclipse.jdt.core.compiler>
+        <version.org.codehaus.jettison>1.3.8</version.org.codehaus.jettison>
+        <version.org.cryptacular>1.2.0</version.org.cryptacular>
+        <version.org.eclipse.jdt.core.compiler>4.6.1</version.org.eclipse.jdt.core.compiler>
         <version.org.glassfish.javax.el>3.0.1.b08-redhat-1</version.org.glassfish.javax.el>
         <version.org.glassfish.javax.enterprise.concurrent>1.0.0.redhat-1</version.org.glassfish.javax.enterprise.concurrent>
-        <version.org.glassfish.javax.json>1.0.3.redhat-1</version.org.glassfish.javax.json>
+        <version.org.glassfish.javax.json>1.0.4</version.org.glassfish.javax.json>
         <version.org.hibernate>5.1.4.Final</version.org.hibernate>
         <version.org.hibernate.commons.annotations>5.0.1.Final-redhat-2</version.org.hibernate.commons.annotations>
         <version.org.hibernate.validator>5.3.4.Final-redhat-1</version.org.hibernate.validator>
@@ -150,7 +150,7 @@
         <version.org.hibernate.search>5.5.5.Final-redhat-1</version.org.hibernate.search>
         <version.org.hornetq>2.4.7.Final-redhat-1</version.org.hornetq>
         <version.org.infinispan>8.2.5.Final-redhat-1</version.org.infinispan>
-        <version.org.jasypt>1.9.1.redhat-1</version.org.jasypt>
+        <version.org.jasypt>1.9.2</version.org.jasypt>
         <version.org.javassist>3.18.1.GA-redhat-2</version.org.javassist>
         <version.org.jberet>1.2.2.Final-redhat-1</version.org.jberet>
         <version.org.jdom>1.1.3.redhat-3</version.org.jdom>
@@ -172,7 +172,7 @@
         <version.org.jboss.seam.int>7.0.0.GA-redhat-2</version.org.jboss.seam.int>
         <version.org.jboss.security.jboss-negotiation>3.0.3.Final-redhat-1</version.org.jboss.security.jboss-negotiation>
         <version.org.jboss.security.jbossxacml>2.0.8.Final-redhat-7</version.org.jboss.security.jbossxacml>
-        <version.org.jboss.shrinkwrap.shrinkwrap>1.1.2</version.org.jboss.shrinkwrap.shrinkwrap>
+        <version.org.jboss.shrinkwrap.shrinkwrap>1.2.6</version.org.jboss.shrinkwrap.shrinkwrap>
         <!-- only needed here until wildfly-arquillian has this version properly synced with arquillian itslef  -->
         <version.org.jboss.shrinkwrap.descriptors>2.0.0-alpha-8</version.org.jboss.shrinkwrap.descriptors>
         <!-- Include the artifactId for org.jboss.spec project versions because artifactId contains the API spec version -->
@@ -185,12 +185,12 @@
         <version.org.jboss.spec.javax.jms.jboss-jms-api_2.0_spec>1.0.0.Final-redhat-1</version.org.jboss.spec.javax.jms.jboss-jms-api_2.0_spec>
         <version.org.jboss.spec.javax.management.j2ee.jboss-j2eemgmt-api_1.1_spec>1.0.1.Final-redhat-4</version.org.jboss.spec.javax.management.j2ee.jboss-j2eemgmt-api_1.1_spec>
         <version.org.jboss.spec.javax.resource.jboss-connector-api_1.7_spec>1.0.0.Final-redhat-1</version.org.jboss.spec.javax.resource.jboss-connector-api_1.7_spec>
-        <version.org.jboss.spec.javax.rmi.jboss-rmi-api_1.0_spec>1.0.4.Final-redhat-5</version.org.jboss.spec.javax.rmi.jboss-rmi-api_1.0_spec>
+        <version.org.jboss.spec.javax.rmi.jboss-rmi-api_1.0_spec>1.0.5.Final</version.org.jboss.spec.javax.rmi.jboss-rmi-api_1.0_spec>
         <version.org.jboss.spec.javax.security.auth.message.jboss-jaspi-api_1.1_spec>1.0.0.Final-redhat-1</version.org.jboss.spec.javax.security.auth.message.jboss-jaspi-api_1.1_spec>
         <version.org.jboss.spec.javax.security.jacc.jboss-jacc-api_1.5_spec>1.0.0.Final-redhat-1</version.org.jboss.spec.javax.security.jacc.jboss-jacc-api_1.5_spec>
         <version.org.jboss.spec.javax.servlet.jboss-servlet-api_3.1_spec>1.0.0.Final-redhat-1</version.org.jboss.spec.javax.servlet.jboss-servlet-api_3.1_spec>
         <version.org.jboss.spec.javax.servlet.jsp.jboss-jsp-api_2.3_spec>1.0.1.Final-redhat-1</version.org.jboss.spec.javax.servlet.jsp.jboss-jsp-api_2.3_spec>
-        <version.org.jboss.spec.javax.transaction.jboss-transaction-api_1.2_spec>1.0.0.Final-redhat-1</version.org.jboss.spec.javax.transaction.jboss-transaction-api_1.2_spec>
+        <version.org.jboss.spec.javax.transaction.jboss-transaction-api_1.2_spec>1.0.1.Final</version.org.jboss.spec.javax.transaction.jboss-transaction-api_1.2_spec>
         <version.org.jboss.spec.javax.ws.jboss-jaxrs-api_2.0_spec>1.0.0.Final-redhat-1</version.org.jboss.spec.javax.ws.jboss-jaxrs-api_2.0_spec>
         <version.org.jboss.spec.javax.xml.bind.jboss-jaxb-api_2.2_spec>1.0.4.Final-redhat-4</version.org.jboss.spec.javax.xml.bind.jboss-jaxb-api_2.2_spec>
         <version.org.jboss.spec.javax.xml.rpc.jboss-jaxrpc-api_1.1_spec>1.0.1.Final-redhat-5</version.org.jboss.spec.javax.xml.rpc.jboss-jaxrpc-api_1.1_spec>
@@ -212,7 +212,6 @@
         <version.org.opensaml.opensaml>3.1.1.redhat-1</version.org.opensaml.opensaml>
         <version.org.picketbox.picketbox-commons>1.0.0.final-redhat-5</version.org.picketbox.picketbox-commons>
         <version.org.picketlink>2.5.5.SP4-redhat-1</version.org.picketlink>
-        <version.org.picketlink.picketlink-wildfly8>2.5.5.SP4-redhat-1</version.org.picketlink.picketlink-wildfly8>
         <version.org.slf4j>1.7.22</version.org.slf4j>
         <version.org.syslog4j>0.9.30</version.org.syslog4j>
         <version.org.wildfly.build-tools>1.1.8.Final</version.org.wildfly.build-tools>
@@ -221,7 +220,7 @@
         <version.org.wildfly.arquillian>2.1.0.Alpha1</version.org.wildfly.arquillian>
         <version.org.wildfly.naming-client>1.0.0.Beta6-redhat-1</version.org.wildfly.naming-client>
         <version.org.wildfly.security.elytron-subsystem>1.0.0.Beta1</version.org.wildfly.security.elytron-subsystem>
-        <version.org.yaml.snakeyaml>1.15.0.redhat-1</version.org.yaml.snakeyaml>
+        <version.org.yaml.snakeyaml>1.17</version.org.yaml.snakeyaml>
         <version.sun.jaxb>2.2.11.redhat-4</version.sun.jaxb>
         <version.sun.saaj-impl>1.3.16.SP1-redhat-6</version.sun.saaj-impl>
         <version.rhino.js>1.7R2</version.rhino.js>
@@ -234,7 +233,7 @@
         <version.help.plugin>2.2</version.help.plugin>
         <version.jacoco.plugin>0.6.3.201306030806</version.jacoco.plugin> <!-- Needs to be set explicitely to match with org.jacoco:org.jacoco.ant - see testsuite. -->
         <version.properties.plugin>2.0.1</version.properties.plugin>
-        <version.xml.plugin>1.0</version.xml.plugin>
+        <version.xml.plugin>1.0.1</version.xml.plugin>
 
         <!-- Modularized JDK support (various workarounds) - activated via profile -->
         <modular.jdk.args/>
@@ -261,7 +260,7 @@
         <!-- Location relative to root that will be used for the cached legacy classpaths used by subsystem-test and core-model-test-->
         <org.jboss.model.test.classpath.cache>target/model-test-classpath-cache</org.jboss.model.test.classpath.cache>
         <org.jboss.model.test.maven.repository.urls>http://download.eng.bos.redhat.com/brewroot/repos/jb-eap-7.1-rhel-7-maven-build/latest/maven/,https://maven.repository.redhat.com/ga/,http://repository.jboss.org/nexus/content/groups/developer/</org.jboss.model.test.maven.repository.urls>
-        <version.com.github.spullara.mustache>0.8.13.redhat-1</version.com.github.spullara.mustache>
+        <version.com.github.spullara.mustache>0.9.4</version.com.github.spullara.mustache>
     </properties>
 
     <modules>
@@ -6039,7 +6038,7 @@
             <dependency>
                 <groupId>org.picketlink.distribution</groupId>
                 <artifactId>picketlink-wildfly8</artifactId>
-                <version>${version.org.picketlink.picketlink-wildfly8}</version>
+                <version>${version.org.picketlink}</version>
             </dependency>
 
             <!-- This dependency is no longer used as a module. However it is required for client the JMS client library -->
