--- a/testsuite/domain/pom.xml
+++ b/testsuite/domain/pom.xml
@@ -178,8 +178,8 @@
             <artifactId>xom</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.codehaus.woodstox</groupId>
-            <artifactId>woodstox-core-asl</artifactId>
+            <groupId>com.fasterxml.woodstox</groupId>
+            <artifactId>woodstox-core</artifactId>
         </dependency>
     </dependencies>
 
