[WFLY-6391] Add model attributes for Elytron-managed connection authentication.
The following attributes were added to data source resources:
ELYTRON_ENABLED, and AUTHENTICATION_CONTEXT

--- a/connector/src/main/resources/org/jboss/as/connector/subsystems/datasources/LocalDescriptions.properties
+++ b/connector/src/main/resources/org/jboss/as/connector/subsystems/datasources/LocalDescriptions.properties
@@ -105,7 +105,9 @@ datasources.data-source.property-value=The property value
 datasources.data-source.query-timeout=Any configured query timeout in seconds. If not provided no timeout will be set
 
 datasources.data-source.same-rm-override=The is-same-rm-override element allows one to unconditionally set whether the javax.transaction.xa.XAResource.isSameRM(XAResource) returns true or false
-datasources.data-source.security-domain=Specifies the security domain which defines the javax.security.auth.Subject that are used to distinguish connections in the pool
+datasources.data-source.security-domain=Specifies the PicketBox security domain which defines the PicketBox javax.security.auth.Subject that are used to distinguish connections in the pool
+datasources.data-source.elytron-enabled=Enables Elytron security for handling authentication of connections. The Elytron authentication-context to be used will be current context if no context is specified (see authentication-context).
+datasources.data-source.authentication-context=The Elytron authentication context which defines the javax.security.auth.Subject that is used to distinguish connections in the pool.
 datasources.data-source.set-tx-query-timeout=Whether to set the query timeout based on the time remaining until transaction timeout. Any configured query timeout will be used if there is no transaction
 datasources.data-source.share-prepared-statements=Whether to share prepared statements, i.e. whether asking for same statement twice without closing uses the same underlying prepared statement
 datasources.data-source.spy=Enable spying of SQL statements
@@ -162,7 +164,9 @@ datasources.data-source.enlistment-trace=Defines if WildFly/IronJacamar should r
 
 datasources.data-source.recovery-username=The user name used for recovery
 datasources.data-source.recovery-password=The password used for recovery
-datasources.data-source.recovery-security-domain=The security domain used for recovery
+datasources.data-source.recovery-security-domain=The security domain used for recovery, for PicketBox security domains
+datasources.data-source.recovery-elytron-enabled=Enables Elytron security for handling authentication of connections for recovery. The Elytron authentication-context to be used will be current context if no context is specified (see authentication-context).
+datasources.data-source.recovery-authentication-context=The Elytron authentication context which defines the javax.security.auth.Subject that is used to distinguish connections in the pool.
 datasources.data-source.recovery-plugin-properties.recovery-plugin-class-name=The fully qualified class name of the recovery plugin implementation
 datasources.data-source.recovery-plugin-class-name=The fully qualified class name of the recovery plugin implementation
 datasources.data-source.recovery-plugin-properties=The properties for the recovery plugin
@@ -228,7 +232,9 @@ datasources.xa-data-source.property-value=The property value
 datasources.xa-data-source.query-timeout=Any configured query timeout in seconds. If not provided no timeout will be set
 
 datasources.xa-data-source.same-rm-override=The is-same-rm-override element allows one to unconditionally set whether the javax.transaction.xa.XAResource.isSameRM(XAResource) returns true or false
-datasources.xa-data-source.security-domain=Specifies the security domain which defines the javax.security.auth.Subject that are used to distinguish connections in the pool
+datasources.xa-data-source.security-domain=Specifies the PicketBox security domain which defines the javax.security.auth.Subject that are used to distinguish connections in the pool
+datasources.xa-data-source.elytron-enabled=Enables Elytron security for handling authentication of connections for recovery. The Elytron authentication-context to be used will be current context if no context is specified (see authentication-context).
+datasources.xa-data-source.authentication-context=The Elytron authentication context which defines the javax.security.auth.Subject that is used to distinguish connections in the pool.
 datasources.xa-data-source.set-tx-query-timeout=Whether to set the query timeout based on the time remaining until transaction timeout. Any configured query timeout will be used if there is no transaction
 datasources.xa-data-source.share-prepared-statements=Whether to share prepared statements, i.e. whether asking for same statement twice without closing uses the same underlying prepared statement
 datasources.xa-data-source.spy=Enable spying of SQL statements
@@ -287,6 +293,8 @@ datasources.xa-data-source.enlistment-trace=Defines if WildFly/IronJacamar shoul
 datasources.xa-data-source.recovery-username=The user name used for recovery
 datasources.xa-data-source.recovery-password=The password used for recovery
 datasources.xa-data-source.recovery-security-domain=The security domain used for recovery
+datasources.xa-data-source.recovery-elytron-enabled=Enables Elytron security for handling authentication of connections for recovery. The Elytron authentication-context to be used will be current context if no context is specified (see authentication-context).
+datasources.xa-data-source.recovery-authentication-context=The Elytron authentication context which defines the javax.security.auth.Subject that is used to distinguish connections in the pool.
 datasources.xa-data-source.recovery-plugin-properties.recovery-plugin-class-name=The fully qualified class name of the recovery plugin implementation
 datasources.xa-data-source.recovery-plugin-class-name=The fully qualified class name of the recovery plugin implementation
 datasources.xa-data-source.recovery-plugin-properties=The properties for the recovery plugin
