[WFLY-6394] Elytron based implementation of the security SPI.

--- a/connector/pom.xml
+++ b/connector/pom.xml
@@ -98,6 +98,10 @@
             <artifactId>ironjacamar-validator</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.jboss.spec.javax.security.auth.message</groupId>
+            <artifactId>jboss-jaspi-api_1.1_spec</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.jboss.logging</groupId>
             <artifactId>jboss-logging</artifactId>
             <scope>provided</scope>
