--- a/undertow/src/main/resources/org/wildfly/extension/undertow/LocalDescriptions.properties
+++ b/undertow/src/main/resources/org/wildfly/extension/undertow/LocalDescriptions.properties
@@ -106,13 +106,10 @@ undertow.access-log.use-server-log=If the log should be written to the server lo
 undertow.access-log.relative-to=The directory the path is relative to
 undertow.access-log.extended=If the log uses the extended log file format
 undertow.access-log.predicate=Predicate that determines if the request should be logged
-undertow.single-sign-on=The SSO configuration for this virtual server.
-undertow.single-sign-on.add=Add a SSO configuration for this virtual server.
-undertow.single-sign-on.remove=Erase the SSO configuration from the virtual server.
-undertow.single-sign-on.cache-container=Enables clustered SSO using the specified clustered cache container.
-undertow.single-sign-on.cache-name=Name of the cache to use in the cache container.
+undertow.single-sign-on=An SSO authentication mechanism configuration.
+undertow.single-sign-on.add=Adds an SSO authentication mechanism.
+undertow.single-sign-on.remove=Removes the SSO authentication mechanism.
 undertow.single-sign-on.domain=The cookie domain that will be used.
-undertow.single-sign-on.re-authenticate=Enables reauthentication with the realm when using SSO.
 undertow.single-sign-on.path=Cookie path.
 undertow.single-sign-on.http-only=Set Cookie httpOnly attribute.
 undertow.single-sign-on.secure=Set Cookie secure attribute.
