[WFLY-7926] Support paging for messaging JDBC store
* add journal-page-store-table attribute to messaging-activemq's server
  resource

JIRA: https://issues.jboss.org/browse/WFLY-7926

--- a/messaging-activemq/src/main/resources/org/wildfly/extension/messaging/activemq/LocalDescriptions.properties
+++ b/messaging-activemq/src/main/resources/org/wildfly/extension/messaging/activemq/LocalDescriptions.properties
@@ -338,6 +338,7 @@ server.journal-large-messages-table=Name of the JDBC table to store the large me
 server.journal-max-io=The maximum number of write requests that can be in the AIO queue at any one time.
 server.journal-messages-table=Name of the JDBC table to store the messages.
 server.journal-min-files=How many journal files to pre-create.
+server.journal-page-store-table=Name of the JDBC table to store pages.
 server.journal-pool-files=The number of journal files that can be reused. ActiveMQ will create as many files as needed however when reclaiming files it will shrink back to the value (-1 means no limit).
 server.journal-sync-non-transactional=Whether to wait for non transaction data to be synced to the journal before returning a response to the client.
 server.journal-sync-transactional=Whether to wait for transaction data to be synchronized to the journal before returning a response to the client.
